--- a/src/app/components/general/contactpoint/contactpoint.component.scss
+++ b/src/app/components/general/contactpoint/contactpoint.component.scss
@@ -3,7 +3,7 @@
 
 :host {
     @include flex-e2e;
-    border-top:$darkborder;
+    @include slimpill;
     width:100%;
     & .contactButtons{
         @include flex-e2e;
