--- a/src/app/components/general/contentbox/contentbox.component.scss
+++ b/src/app/components/general/contentbox/contentbox.component.scss
@@ -48,7 +48,7 @@
         padding-bottom: $elem-border-radius;
         @include mobile-screen {
             grid-template-columns: 1fr;
-            grid-template-rows: $elem-height auto auto auto;
+            grid-template-rows: auto auto auto auto;
             grid-template-areas:
                 "preview"
                 "desc"
@@ -57,7 +57,7 @@
         }
         @include tablet-screen {
             grid-template-columns: 1fr 1fr;
-            grid-template-rows: $elem-height auto auto;
+            grid-template-rows: auto auto auto;
             grid-template-areas:
                 "preview  preview"
                 "image  desc"
@@ -65,7 +65,7 @@
         }
         @include desktop-screen {
             grid-template-columns: 1fr 1fr;
-            grid-template-rows: $elem-height auto auto;
+            grid-template-rows: auto auto auto;
             grid-template-areas:
                 "preview  preview"
                 "image  desc"
