--- a/src/app/components/views/projects/projects.component.scss
+++ b/src/app/components/views/projects/projects.component.scss
@@ -7,6 +7,9 @@
         @include slimpill;
         & .content {
             @include flex-e2e;
+            & > * {
+                width:auto;
+            }
         }
         & app-button p {
             @include slimpill;
