--- a/src/app/components/views/projects/projects.component.html
+++ b/src/app/components/views/projects/projects.component.html
@@ -1,8 +1,9 @@
 <h1>Projects</h1>
-
-<app-filter [filters]="skillsFilter" filterName="Filtern nach Skill" (filterEmitter)="filterProjectsBySkill($event)"></app-filter>
-<app-filter [filters]="projectsFilter" filterName="Filtern nach Projekteigenschaft" (filterEmitter)="filterProjects($event)"></app-filter>
-<app-sort [fields]="sortFields" (selectedEmitter)="sortProjectsBy($event)"></app-sort>
+<div class="filters">
+    <app-filter [filters]="skillsFilter" filterName="Filtern nach Skill" (filterEmitter)="filterProjectsBySkill($event)"></app-filter>
+    <app-filter [filters]="projectsFilter" filterName="Filtern nach Projekteigenschaft" (filterEmitter)="filterProjects($event)"></app-filter>
+    <app-sort [fields]="sortFields" (selectedEmitter)="sortProjectsBy($event)"></app-sort>
+</div>
 
 <app-contentbox *ngFor="let project of projects | projectsSort:sortValue:sortAsc | projectsFilter:selectedSkillFilter:selectedProjectFilter"
     [image]='{id:"img",alt:"",name:"",path:project.image}'
