fixed bug in projects sorter, changed profilepic

--- a/src/app/components/views/career/career.component.html
+++ b/src/app/components/views/career/career.component.html
@@ -1,4 +1,4 @@
-<h1>Career</h1>
+<h1>Karriere</h1>
 <div *ngFor="let career of careers">
     <ng-container *ngIf="career.type === ct.SCHOOL ? career.school : career.workplace as item">
         <app-contentbox
