--- a/src/app/components/views/projects/projects.component.html
+++ b/src/app/components/views/projects/projects.component.html
@@ -1,4 +1,4 @@
-<h1>Projects</h1>
+<h1>Projekte</h1>
 <div class="filters">
     <app-filter [filters]="skillsFilter" filterName="Filtern nach Skill" (filterEmitter)="filterProjectsBySkill($event)"></app-filter>
     <app-filter [filters]="projectsFilter" filterName="Filtern nach Projekteigenschaft" (filterEmitter)="filterProjects($event)"></app-filter>
