added lazy loading for view components, fixed pipe bug, styled error page

--- a/src/app/components/views/page-not-found/page-not-found.component.scss
+++ b/src/app/components/views/page-not-found/page-not-found.component.scss
@@ -1,5 +1,8 @@
-@import 'src/scss/mixins.scss';
+@import "src/scss/mixins.scss";
 
-:host{
+:host {
     @include wrapper;
+    p {
+        @include slimpill;
+    }
 }
