refactored code, added responsive font-size

--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -21,10 +21,7 @@
     border: none;
     border-top: $defborderthin;
     border-bottom: $defborderthin;
-    font: {
-        family: $mono;
-        size: $elem-size;
-    }
+    font-family: $mono;
 }
 
 @mixin pill {
