--- a/src/app/components/general/skills/skill-item/skill-item.component.html
+++ b/src/app/components/general/skills/skill-item/skill-item.component.html
@@ -1,25 +1,8 @@
-<div
-  [class]="
-    showPercent
-      ? 'percent-' + skill.knowledgepercent + ' skill-item'
-      : 'skill-item'
-  "
->
-  <img
-    class="skill-cat-img"
-    *ngFor="let category of skill.skillcategories"
-    src="{{ category.image.path }}"
-    alt="{{ category.image.alt }}"
-    loading="lazy"
-  />
-  <p *ngIf="!skill.url">{{ skillText }}</p>
-  <a *ngIf="skill.url" href="{{ skill.url }}" target="_blank">{{
-    skillText
-  }}</a>
-  <img
-    class="skill-cat-img"
-    src="assets/{{ skill.thumbnail }}"
-    alt="{{ skill.thumbnail }}"
-    loading="lazy"
-  />
+<div [class]="showPercent ? 'percent-' + skill.knowledgepercent + ' skill-item' : 'skill-item'">
+  <div class="skill-cat-img-container">
+    <img class="skill-cat-img" *ngFor="let category of skill.skillcategories" src="{{category.image.path}}" alt="{{category.image.alt}}" loading="lazy" />
+  </div>
+  <p *ngIf="!skill.url">{{skillText}}</p>
+  <a *ngIf="skill.url" href="{{skill.url}}" target="_blank">{{skillText}}</a>
+  <img class="skill-icon" src="assets/{{skill.thumbnail}}" alt="{{skill.thumbnail}}" loading="lazy" />
 </div>
