--- a/src/app/components/general/address/address.component.html
+++ b/src/app/components/general/address/address.component.html
@@ -1,6 +1,10 @@
 <div class="address">
-    <p>{{address.street}}</p>
-    <p>{{address.zip}} {{address.city}}</p>
-    <p>{{address.country.name}}</p>
+  <p>{{ address.street }}</p>
+  <p>{{ address.zip }} {{ address.city }}</p>
+  <p>{{ address.country.name }}</p>
 </div>
-<app-button [onClick]="map(address)" [type]="lt.MAP" name="Google Maps"></app-button>
+<app-button
+  [onClick]="map(address)"
+  [type]="lt.MAP"
+  name="Google Maps"
+></app-button>
