--- a/src/app/components/general/contentbox/contentbox.component.html
+++ b/src/app/components/general/contentbox/contentbox.component.html
@@ -1,22 +1,35 @@
 <div #cbToggle>
-    <div class="preview" (click)="cbToggle.classList.toggle('active')">
-        <img *ngIf="preview" class="previewImg" src="{{preview.path}}" alt="{{preview.alt}}" loading="lazy">
-        
-        <h2 class="title" *ngIf="!link">{{title}}</h2>
-        <h2 class="title" *ngIf="link"><a href="{{link}}" target="_blank">{{title}}</a></h2>
-        
-        <img class="arrowImg" src="{{arrowIcon.path}}" alt="{{arrowIcon.alt}}" loading="lazy">
-    </div>
-    <div *ngIf="hasImage" class="mainImg">
-        <app-carousel *ngIf="isCarousel" [images]="images"></app-carousel>
-        <app-image *ngIf="!isCarousel" [image]="image"></app-image>
-    </div>
-    
-    <div *ngIf="subTitle || description" class="desc">
-        <h3 *ngIf="subTitle">{{subTitle}}</h3>
-        <p *ngIf="description">{{description}}</p>
-    </div>
-    <div class="bottom">
-        <ng-content></ng-content>
-    </div>
+  <div class="preview" (click)="cbToggle.classList.toggle('active')">
+    <img
+      *ngIf="preview"
+      class="previewImg"
+      src="{{ preview.path }}"
+      alt="{{ preview.alt }}"
+      loading="lazy"
+    />
+
+    <h2 class="title" *ngIf="!link">{{ title }}</h2>
+    <h2 class="title" *ngIf="link">
+      <a href="{{ link }}" target="_blank">{{ title }}</a>
+    </h2>
+
+    <img
+      class="arrowImg"
+      src="{{ arrowIcon.path }}"
+      alt="{{ arrowIcon.alt }}"
+      loading="lazy"
+    />
+  </div>
+  <div *ngIf="hasImage" class="mainImg">
+    <app-carousel *ngIf="isCarousel" [images]="images"></app-carousel>
+    <app-image *ngIf="!isCarousel" [image]="image"></app-image>
+  </div>
+
+  <div *ngIf="subTitle || description" class="desc">
+    <h3 *ngIf="subTitle">{{ subTitle }}</h3>
+    <p *ngIf="description">{{ description }}</p>
+  </div>
+  <div class="bottom">
+    <ng-content></ng-content>
+  </div>
 </div>
