--- a/src/app/components/general/header/header.component.html
+++ b/src/app/components/general/header/header.component.html
@@ -1,7 +1,28 @@
 <nav class="navbar">
-    <ul>
-        <li><a routerLink="home" routerLinkActive="active" ariaCurrentWhenActive="page">Home</a></li>
-        <li><a routerLink="career" routerLinkActive="active" ariaCurrentWhenActive="page">Karriere</a></li>
-        <li><a routerLink="projects" routerLinkActive="active" ariaCurrentWhenActive="page">Projekte</a></li>
-    </ul>
+  <ul>
+    <li>
+      <a
+        routerLink="home"
+        routerLinkActive="active"
+        ariaCurrentWhenActive="page"
+        >Home</a
+      >
+    </li>
+    <li>
+      <a
+        routerLink="career"
+        routerLinkActive="active"
+        ariaCurrentWhenActive="page"
+        >Karriere</a
+      >
+    </li>
+    <li>
+      <a
+        routerLink="projects"
+        routerLinkActive="active"
+        ariaCurrentWhenActive="page"
+        >Projekte</a
+      >
+    </li>
+  </ul>
 </nav>
