--- a/src/app/components/general/tooltip/tooltip.component.html
+++ b/src/app/components/general/tooltip/tooltip.component.html
@@ -7,7 +7,7 @@
       alt="{{ icon.alt }}"
       loading="lazy"
     />
-    <h5>{{ name }}</h5>
+    <p class="name-title">{{ name }}</p>
   </div>
   <p *ngIf="description">{{ description }}</p>
   <div class="tooltip-content">
