--- a/src/app/components/general/button/button.component.html
+++ b/src/app/components/general/button/button.component.html
@@ -1,3 +1,8 @@
-<img src="{{type.image.path}}" alt="icon for {{name}} link" loading="lazy" (click)="onClick()">
+<img
+  src="{{ type.image.path }}"
+  alt="icon for {{ name }} link"
+  loading="lazy"
+  (click)="onClick()"
+/>
 <!--p *ngIf="type === lt.OTHER || type === lt.PERSON" (click)="onClick()">{{name}}</p-->
 <ng-content></ng-content>
