--- a/src/app/components/general/carousel/carousel.component.html
+++ b/src/app/components/general/carousel/carousel.component.html
@@ -1,10 +1,22 @@
 <div class="carousel">
-    <div *ngFor="let slide of images; index as i" class="slide" [ngClass]="{'active':current === i}">
-        <app-image [image]="slide"></app-image>
-    </div>
-    <div class="arrow left" (click)="showSlide(current - 1)"><div><i></i></div></div>
-    <div class="arrow right" (click)="showSlide(current + 1)"><div><i></i></div></div>
+  <div
+    *ngFor="let slide of images; index as i"
+    class="slide"
+    [ngClass]="{ active: current === i }"
+  >
+    <app-image [image]="slide"></app-image>
+  </div>
+  <div class="arrow left" (click)="showSlide(current - 1)">
+    <div><i></i></div>
+  </div>
+  <div class="arrow right" (click)="showSlide(current + 1)">
+    <div><i></i></div>
+  </div>
 </div>
 <div class="dots">
-    <div *ngFor="let slide of images; index as i" (click)="showSlide(i)" [ngClass]="{'active':current === i}"></div>
+  <div
+    *ngFor="let slide of images; index as i"
+    (click)="showSlide(i)"
+    [ngClass]="{ active: current === i }"
+  ></div>
 </div>
