--- a/src/app/components/general/filter/filter.component.html
+++ b/src/app/components/general/filter/filter.component.html
@@ -1,41 +1,101 @@
 <div class="filterComp">
-    <div class="filterTitle">
-        <div class="showFilter" (click)="content.classList.toggle('active'); img.classList.toggle('active')">
-            <img #img class="arrowImg" src="{{arrowIcon.path}}" alt="{{arrowIcon.alt}}" loading="lazy">
-            <h3>{{filterName}}</h3>
-        </div>
-        <h4 (click)="reset()" class="filterReset">Zurücksetzen</h4>
+  <div class="filterTitle">
+    <div
+      class="showFilter"
+      (click)="
+        content.classList.toggle('active'); img.classList.toggle('active')
+      "
+    >
+      <img
+        #img
+        class="arrowImg"
+        src="{{ arrowIcon.path }}"
+        alt="{{ arrowIcon.alt }}"
+        loading="lazy"
+      />
+      <h3>{{ filterName }}</h3>
     </div>
-    <div #content class="filterItems">
-        <div #cat *ngFor="let category of filters.categories">
-            <div class="showFilter" (click)="cat.classList.toggle('active'); imgF.classList.toggle('active')">
-                <img #imgF class="arrowImg" src="{{arrowIcon.path}}" alt="{{arrowIcon.alt}}" loading="lazy">
-                <h5 class="categoryTitle">{{category.name}}</h5>
-            </div>
-            <div class="tags">
-                <div #t *ngFor="let tag of category.tags" (click)="toggleTag(category, tag); t.classList.toggle('active')" class="tag">
-                    <img *ngIf="tag.image" src="{{tag.image.path}}" alt="{{tag.image.alt}}" class="tagIcon" loading="lazy"/>
-                    <p>{{tag.name}}</p>
-                </div>
-            </div>
+    <h4 (click)="reset()" class="filterReset">Zurücksetzen</h4>
+  </div>
+  <div #content class="filterItems">
+    <div #cat *ngFor="let category of filters.categories">
+      <div
+        class="showFilter"
+        (click)="
+          cat.classList.toggle('active'); imgF.classList.toggle('active')
+        "
+      >
+        <img
+          #imgF
+          class="arrowImg"
+          src="{{ arrowIcon.path }}"
+          alt="{{ arrowIcon.alt }}"
+          loading="lazy"
+        />
+        <h5 class="categoryTitle">{{ category.name }}</h5>
+      </div>
+      <div class="tags">
+        <div
+          #t
+          *ngFor="let tag of category.tags"
+          (click)="toggleTag(category, tag); t.classList.toggle('active')"
+          class="tag"
+        >
+          <img
+            *ngIf="tag.image"
+            src="{{ tag.image.path }}"
+            alt="{{ tag.image.alt }}"
+            class="tagIcon"
+            loading="lazy"
+          />
+          <p>{{ tag.name }}</p>
         </div>
+      </div>
+    </div>
 
-        <div #ran *ngFor="let range of filters.ranges">
-            <div class="showFilter" (click)="ran.classList.toggle('active'); imgR.classList.toggle('active')">
-                <img #imgR class="arrowImg" src="{{arrowIcon.path}}" alt="{{arrowIcon.alt}}" loading="lazy">
-                <h5 class="categoryTitle">{{range.name}}</h5>
-            </div>
-            <div class="range">
-                <p class="rangeFrom">{{r1.value}}</p>
-                <input type="range" [min]="range.values[0]" [max]="range.values[range.values.length-1]" [step]="range.step" value="{{range.values[0]}}" (input)="changeRange(range, r1)" class="slider slider1" #r1>
-                <input type="range" [min]="range.values[0]" [max]="range.values[range.values.length-1]" [step]="range.step" value="{{range.values[range.values.length-1]}}" (input)="changeRange(range, r2)" class="slider slider2" #r2>
-                <p class="rangeTo">{{r2.value}}</p>
-            </div>
-        </div>
+    <div #ran *ngFor="let range of filters.ranges">
+      <div
+        class="showFilter"
+        (click)="
+          ran.classList.toggle('active'); imgR.classList.toggle('active')
+        "
+      >
+        <img
+          #imgR
+          class="arrowImg"
+          src="{{ arrowIcon.path }}"
+          alt="{{ arrowIcon.alt }}"
+          loading="lazy"
+        />
+        <h5 class="categoryTitle">{{ range.name }}</h5>
+      </div>
+      <div class="range">
+        <p class="rangeFrom">{{ r1.value }}</p>
+        <input
+          type="range"
+          [min]="range.values[0]"
+          [max]="range.values[range.values.length - 1]"
+          [step]="range.step"
+          value="{{ range.values[0] }}"
+          (input)="changeRange(range, r1)"
+          class="slider slider1"
+          #r1
+        />
+        <input
+          type="range"
+          [min]="range.values[0]"
+          [max]="range.values[range.values.length - 1]"
+          [step]="range.step"
+          value="{{ range.values[range.values.length - 1] }}"
+          (input)="changeRange(range, r2)"
+          class="slider slider2"
+          #r2
+        />
+        <p class="rangeTo">{{ r2.value }}</p>
+      </div>
     </div>
+  </div>
 </div>
-
-
 
 <!-- p>{{filtersSelected$ | async | json}}</p>
 <form #filterForm="ngForm">
@@ -48,4 +108,3 @@
 <div *ngFor="let filter of filterValues | keyvalue">
     <div #filterItem class="filter" (click)="filterItem.classList.toggle('active')">{{filter.value}}</div>
 </div -->
-
