--- a/src/app/components/views/career/career.component.html
+++ b/src/app/components/views/career/career.component.html
@@ -1,41 +1,83 @@
 <h1>Karriere</h1>
 <div *ngFor="let career of careers">
-    <ng-container *ngIf="career.type === ct.SCHOOL ? career.school : career.workplace as item">
-        <app-contentbox
-            [image]='{"id":item.name,"name":item.name,"path":career.type.logo.path,"alt":career.type.name}'
-            title="{{item.name}}" 
-            subTitle="{{career.yearfrom}} - {{career.yearto}}" 
-            description="{{career.description}}"> 
-            <div class="bot bottomLinks">
-                <div class="contactPoints">
-                    <div class="title">
-                        <img src="{{contactIcon.path}}" alt="{{contactIcon.alt}}" loading="lazy">
-                        <h4>Kontakt{{item.contactpoints.length > 1 ? "e" : ""}}</h4>
-                    </div>
-                    <app-contactpoint *ngFor="let contact of item.contactpoints" [contact]="contact"></app-contactpoint>
-                </div>
-                <div class="web">
-                    <div class="title">
-                        <img src="{{urlIcon.path}}" alt="{{urlIcon.alt}}" loading="lazy">
-                        <h4>Webseite</h4>
-                    </div>
-                    <app-button [onClick]="ol(item.url)" [type]="lt.URL" [name]="lt.URL.name"></app-button>
-                </div>
-                <div class="address">
-                    <div class="title">
-                        <img src="{{addressIcon.path}}" alt="{{addressIcon.alt}}" loading="lazy">
-                        <h4>Adresse</h4>
-                    </div>
-                    <app-address [address]="item.address"></app-address>
-                </div>
-            </div>
-            <div #skills class="bot skills">
-                <div class="showSkills" (click)="skills.classList.toggle('active'); img.classList.toggle('active')">
-                    <img #img class="arrowImg" src="{{arrowIcon.path}}" alt="{{arrowIcon.alt}}" loading="lazy">
-                    <h4>Angewandte Skills</h4>
-                </div>
-                <app-skills-percent [skills]="career.skills" name="(Häufigkeit in %)"></app-skills-percent>
-            </div>
-        </app-contentbox>
-    </ng-container>
+  <ng-container
+    *ngIf="career.type === ct.SCHOOL ? career.school : career.workplace as item"
+  >
+    <app-contentbox
+      [image]="{
+        id: item.name,
+        name: item.name,
+        path: career.type.logo.path,
+        alt: career.type.name
+      }"
+      [imagePreview]="item.thumbnail"
+      title="{{ item.name }}"
+      subTitle="{{ career.yearfrom }} - {{ career.yearto }}"
+      description="{{ career.description }}"
+    >
+      <div class="bot bottomLinks">
+        <div class="contactPoints">
+          <div class="title">
+            <img
+              src="{{ contactIcon.path }}"
+              alt="{{ contactIcon.alt }}"
+              loading="lazy"
+            />
+            <h4>Kontakt{{ item.contactpoints.length > 1 ? "e" : "" }}</h4>
+          </div>
+          <app-contactpoint
+            *ngFor="let contact of item.contactpoints"
+            [contact]="contact"
+          ></app-contactpoint>
+        </div>
+        <div class="web">
+          <div class="title">
+            <img
+              src="{{ urlIcon.path }}"
+              alt="{{ urlIcon.alt }}"
+              loading="lazy"
+            />
+            <h4>Webseite</h4>
+          </div>
+          <app-button
+            [onClick]="ol(item.url)"
+            [type]="lt.URL"
+            [name]="lt.URL.name"
+          ></app-button>
+        </div>
+        <div class="address">
+          <div class="title">
+            <img
+              src="{{ addressIcon.path }}"
+              alt="{{ addressIcon.alt }}"
+              loading="lazy"
+            />
+            <h4>Adresse</h4>
+          </div>
+          <app-address [address]="item.address"></app-address>
+        </div>
+      </div>
+      <div #skills class="bot skills">
+        <div
+          class="showSkills"
+          (click)="
+            skills.classList.toggle('active'); img.classList.toggle('active')
+          "
+        >
+          <img
+            #img
+            class="arrowImg"
+            src="{{ arrowIcon.path }}"
+            alt="{{ arrowIcon.alt }}"
+            loading="lazy"
+          />
+          <h4>Angewandte Skills</h4>
+        </div>
+        <app-skills-percent
+          [skills]="career.skills"
+          name="(Häufigkeit in %)"
+        ></app-skills-percent>
+      </div>
+    </app-contentbox>
+  </ng-container>
 </div>
